Refactor streams to use Streams
Stream operations are typically side-effect-free, promoting immutable code that is easier to maintain and test